--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,6 @@ anyhow    = "1.0"
 thiserror = "1.0"
 serde       = { version = "1.0", features = ["derive"] }
 serde_json  = "1.0"
+regex = "1.11.1"
+once_cell = "1.21.3"
+
